--- a/lib/i18n/string.i18n.json
+++ b/lib/i18n/string.i18n.json
@@ -7,7 +7,8 @@
     "add": "Add",
     "cancel": "Cancel",
     "delete": "Delete",
-    "update": "Update"
+    "update": "Update",
+    "confirm": "Confirm"
   },
   "pages": {
     "intro": {
@@ -104,6 +105,10 @@
     "listTasksDelete": {
       "title": "Do you want to delete this list?",
       "subtitle": "Delete this list will also delete the tasks"
+    },
+    "delete": {
+      "title": "Do you want to delete?",
+      "subtitle": "This action cannot be undone"
     },
     "language": {
       "title": "The tasking application uses the same language you have configured on the device.",
