--- a/lib/i18n/string_es.i18n.json
+++ b/lib/i18n/string_es.i18n.json
@@ -27,11 +27,10 @@
         "task5": "Toca para editar esta tarea",
         "task5note": "Puedes escribir notas aquí.",
         "task5subtask": "Puedes agregar sub tareas aquí",
-        "task6": "Toque prolongado para arrastrar esta tarea",
-        "task7": "Toca la esquina superior derecha ⁝ para editar o eliminar esta lista",
-        "task8": "Hay otras funciones fáciles de usar, ¡pruébalas!",
-        "task9": "Eso es todo por el tutorial. Espero que esta aplicación te sea útil.",
-        "task10": "¡Gracias por usar esta aplicación!"
+        "task6": "Toca la esquina superior derecha ⁝ para editar o eliminar esta lista",
+        "task7": "Hay otras funciones fáciles de usar, ¡pruébalas!",
+        "task8": "Eso es todo por el tutorial. Espero que esta aplicación te sea útil.",
+        "task9": "¡Gracias por usar esta aplicación!"
       }
     },
     "home": {
@@ -49,10 +48,8 @@
       "alertUnpinned": "Desanclar"
     },
     "task": {
-      "placeholderTask": "Nombre de la tarea",
-      "placeholderNote": "Añadir una nota",
-      "placeholderSubtask": "Tarea secundaria",
-      "placeholderSubtaskAdd": "Añadir una tarea secundaria"
+      "placeholderTitle": "Título",
+      "placeholderNote": "Nota"
     },
     "settings": {
       "general": {
