🔨 refactor(notification): Change static to instance methods

--- a/lib/i18n/string.i18n.json
+++ b/lib/i18n/string.i18n.json
@@ -141,6 +141,10 @@
     "taskAdd": {
       "placeholder": "new task",
       "errorEmptyName": "Please enter a task."
+    },
+    "taskReminder": {
+      "change": "Change reminder",
+      "remove": "Remove reminder"
     }
   },
   "dialogs": {
