--- a/lib/i18n/common.i18n.json
+++ b/lib/i18n/common.i18n.json
@@ -77,9 +77,9 @@
       "title": "Do you want to delete this list?",
       "subtitle": "Delete this list will also delete the tasks"
     },
-    "delete": {
-      "title": "Do you want to delete?",
-      "subtitle": "This action cannot be undone"
+    "deleteTask": {
+      "title": "Delete task?",
+      "subtitle": "Are you sure you want to delete it?\nYou can't undo this action"
     },
     "restoreApp": {
       "title": "¿Restore App?",
