✨ feat: Add ListTaskDeleteDialog and refactor usage

--- a/lib/i18n/common_es.i18n.json
+++ b/lib/i18n/common_es.i18n.json
@@ -74,8 +74,8 @@
   },
   "dialogs": {
     "listTasksDelete": {
-      "title": "¿Quieres eliminar esta lista?",
-      "subtitle": "Eliminar esta lista también eliminará las tareas"
+      "title": "¿Eliminar lista?",
+      "subtitle": "¿Estás seguro de que quieres eliminarlo?\nNo puedes deshacer esta acción"
     },
     "deleteTask": {
       "title": "¿Eliminar tarea?",
