--- a/lib/i18n/common.i18n.json
+++ b/lib/i18n/common.i18n.json
@@ -74,8 +74,8 @@
   },
   "dialogs": {
     "listTasksDelete": {
-      "title": "Do you want to delete this list?",
-      "subtitle": "Delete this list will also delete the tasks"
+      "title": "Delete list?",
+      "subtitle": "Are you sure you want to delete it?\nYou can't undo this action"
     },
     "deleteTask": {
       "title": "Delete task?",
