feat(router, tasks): add new task routes and pages

--- a/lib/i18n/common.i18n.json
+++ b/lib/i18n/common.i18n.json
@@ -64,7 +64,7 @@
       }
     },
     "taskAdd": {
-      "placeholder": "new task",
+      "placeholder": "Add a task",
       "errorEmptyName": "Please enter a task."
     },
     "taskReminder": {
