--- a/lib/i18n/common_es.i18n.json
+++ b/lib/i18n/common_es.i18n.json
@@ -64,7 +64,7 @@
       }
     },
     "taskAdd": {
-      "placeholder": "nueva tarea",
+      "placeholder": "Agregar una tarea",
       "errorEmptyName": "Ingrese una tarea."
     },
     "taskReminder": {
